gitlab/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
  labels:
    name: gitlab
