gitlab/5-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: gitlab
  namespace: gitlab
  annotations:
    cert-manager.io/cluster-issuer: dnspod  # 填你cert-manager 注册了的方式
    kubernetes.io/tls-acme: 'true'          # true的话，cert-manager 会自动生成对应的ssl证书
    nginx.ingress.kubernetes.io/cors-allow-headers: X-Forwarded-For
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 10G
  labels:
    k8s.kuboard.cn/name: gitlab
spec:
  ingressClassName: nginx
  rules:
    - host: gitlab.example.com                # 改成你自己的域名
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 80
  tls:
    - hosts:
        - gitlab.example.com                   # 改成你自己的域名
      secretName: gitlab-tls
